@@ -32,7 +32,7 @@
 #include "macros.h"
 
 /*
- * global variables only used in the core. Reducing this list would be
+ * TODO: global variables only used in the core. Reducing this list would be
  * a Good Thing(tm).
  */
 extern char *nagios_binary_path;
