@@ -6,7 +6,6 @@
 #include <stdio.h>
 #include <assert.h>
 #include <sys/types.h>
-#include <signal.h>
 #include <unistd.h>
 #include <sys/time.h>
 #include "squeue.c"
