@@ -4,7 +4,6 @@
  */
 
 #include <time.h>
-#include <signal.h>
 #include <stdlib.h>
 #include <unistd.h>
 #include <string.h>
@@ -15,7 +14,7 @@
 #include <sys/un.h>
 #include <netinet/in.h>
 #include "worker.h"
-
+#include "signal_handler.h"
 
 typedef struct simple_worker {
 	int pid, sd;
@@ -206,26 +205,10 @@ int main(int argc, char **argv)
 {
 	simple_worker *wp;
 	int i;
-#ifdef HAVE_SIGACTION
-	struct sigaction sig_action;
 
-	sig_action.sa_sigaction = NULL;
-	sigfillset(&sig_action.sa_mask);
-	sig_action.sa_flags=SA_NOCLDSTOP;
-	sig_action.sa_handler = child_exited;
-	sigaction(SIGCHLD, &sig_action, NULL);
-
-	sig_action.sa_flags = SA_NODEFER|SA_RESTART;
-	sig_action.sa_handler = sighandler;
-	sigfillset(&sig_action.sa_mask);
-	sigaction(SIGINT, &sig_action, NULL);
-	sigaction(SIGPIPE, &sig_action, NULL);
-#else /* HAVE_SIGACTION */
-
-	signal(SIGINT, sighandler);
-	signal(SIGPIPE, sighandler);
-	signal(SIGCHLD, child_exited);
-#endif /* HAVE_SIGACTION */
+	catch_signal(SIGINT, sighandler, 1, SA_NODEFER|SA_RESTART);
+	catch_signal(SIGPIPE, sighandler, 1, SA_NODEFER|SA_RESTART);
+	catch_signal(SIGCHLD, child_exited, 0, 0);
 
 	iobs = iobroker_create();
 	if (!iobs)
