@@ -25,6 +25,6 @@ user = root
 autostart = true
 
 [program:nagios]
-command = /etc/init.d/nagios start
+command = /usr/local/nagios/bin/nagios /usr/local/nagios/etc/nagios.cfg 
 user = root
 autostart = true
