@@ -10,6 +10,7 @@ ENHANCEMENTS
 FIXES
 * Check reaper no longer requires a decimal point in timestamp field (#622) (Sebastian Wolf)
 * $SERVICEPROBLEMID$ now accessible when notifications are sent (#688) (Sebastian Wolf)
+* Refactor all signal functions use a helper function to unify the code (Isaac White)
 
 4.4.5 - 2019-08-20
 ------------------
